# pipeline

pipeline/pipelines-main/: Dockerfile  pyproject.toml
pipeline/pipelines-main/pipelines/: norm  original.csv  pipeline.py  sqlite_pipeline.db  tasks.py
