[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "pipelines"
version = "0.1.0"
description = ""
authors = ["Leonid Shvechikov <shvechikov@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1.3"
pandas = "^1.5.3"
databases = {extras = ["sqlite3"], version = "^0.7.0"}
numpy = "^1.24.2"

[tool.poetry.scripts]
pipelines = "pipelines:cli.cli"
